--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="ms-5">
     <h1>Hello, world!</h1>
     <h2>Just a form, to test sending to an email box...</h2>
-    <form id=""contact-form method=""post" action="contact_process.php">
+    <form id="contact-form" method="post" action="contact_process.php" role="form">
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Email address</label>
         <input type="email" class="form-control" id="exampleInputEmail1" name="email" aria-describedby="emailHelp">
